--- a/_sass/sections/_header.scss
+++ b/_sass/sections/_header.scss
@@ -4,6 +4,7 @@
 
   // Positioning context for the mobile navigation icon
   position: relative;
+  z-index: 5;
 }
 
 .site-nav {
